Fix double borders

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -1768,7 +1768,7 @@ tr.ief-row-entity .ief-entity-operations {
   }
 
   .field-name-field-family-member-contacts {
-    table { border: 0; }
+    table.field-multiple-table { border: 0; }
     thead { display: none; }
   }
 }
